--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -343,6 +343,9 @@
     <Compile Include="Areas\Production\ProductionAreaRegistration.cs" />
     <Compile Include="Areas\Purchases\Controllers\HomeController.cs" />
     <Compile Include="Areas\Purchases\PurchasesAreaRegistration.cs" />
+    <Compile Include="Areas\QC\Controllers\HomeController.cs" />
+    <Compile Include="Areas\QC\Controllers\ProductController.cs" />
+    <Compile Include="Areas\QC\QCAreaRegistration.cs" />
     <Compile Include="Areas\ResearchAndDevelopment\Controllers\HomeController.cs" />
     <Compile Include="Areas\ResearchAndDevelopment\Controllers\ProductController.cs" />
     <Compile Include="Areas\ResearchAndDevelopment\ResearchAndDevelopmentAreaRegistration.cs" />
@@ -7957,6 +7960,13 @@
     <Content Include="Areas\Sales\Views\Return\ConfirmReturnEntry.cshtml" />
     <Content Include="Areas\Sales\Views\Return\ViewAll.cshtml" />
     <Content Include="Areas\Sales\Views\Return\Details.cshtml" />
+    <Content Include="Areas\QC\Views\web.config" />
+    <Content Include="Areas\QC\Views\Home\Home.cshtml" />
+    <Content Include="Areas\QC\Views\Shared\_MenuPartialPage.cshtml" />
+    <Content Include="Areas\QC\Views\Home\ViewAllReturns.cshtml" />
+    <Content Include="Areas\QC\Views\Home\ReturnDetails.cshtml" />
+    <Content Include="Areas\Sales\Views\Return\ReturnDetails.cshtml" />
+    <Content Include="Areas\QC\Views\Product\Receive.cshtml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
     <None Include="Properties\PublishProfiles\Publish.pubxml" />
@@ -8080,6 +8090,7 @@
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Shared\_ViewProductLifeCyclePartialPage.cshtml" />
     <Content Include="Views\Shared\_ViewReturnDetailsPartialPage.cshtml" />
+    <Content Include="Views\Shared\_ViewAllReturnsPartialPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -8101,6 +8112,7 @@
     <Folder Include="Areas\Production\Models\" />
     <Folder Include="Areas\Purchases\Models\" />
     <Folder Include="Areas\Purchases\Views\Shared\" />
+    <Folder Include="Areas\QC\Models\" />
     <Folder Include="Areas\ResearchAndDevelopment\Models\" />
     <Folder Include="Areas\Sales\Files\Returns\" />
     <Folder Include="Areas\Sales\Models\" />
