--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -8001,6 +8001,7 @@
     <Content Include="Areas\Production\Views\ProductionHead\ViewQcVerifiedProduct.cshtml" />
     <Content Include="Areas\Sales\Views\Home\ClientLedger.cshtml" />
     <Content Include="Areas\AccountExecutive\Views\Home\ClientLedger.cshtml" />
+    <Content Include="Areas\Production\Views\Home\ProductionSummary.cshtml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
     <None Include="Properties\PublishProfiles\Publish.pubxml" />
