--- a/NBL.Models/NBL.Models.csproj
+++ b/NBL.Models/NBL.Models.csproj
@@ -210,6 +210,7 @@
     <Compile Include="ViewModels\TransferProducts\ViewTripModel.cs" />
     <Compile Include="ViewModels\ViewAssignedRegion.cs" />
     <Compile Include="ViewModels\ViewAssignedUpazilla.cs" />
+    <Compile Include="ViewModels\ViewAssignedUserRole.cs" />
     <Compile Include="ViewModels\ViewBranch.cs" />
     <Compile Include="ViewModels\ViewChalanModel.cs" />
     <Compile Include="ViewModels\ViewClient.cs" />
