--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -8002,6 +8002,8 @@
     <Content Include="Areas\Sales\Views\Home\ClientLedger.cshtml" />
     <Content Include="Areas\AccountExecutive\Views\Home\ClientLedger.cshtml" />
     <Content Include="Areas\Production\Views\Home\ProductionSummary.cshtml" />
+    <Content Include="Areas\Corporate\Views\Home\ProductionSummary.cshtml" />
+    <Content Include="Areas\Production\Views\Delivery\ViewScannedBarcodeList.cshtml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
     <None Include="Properties\PublishProfiles\Publish.pubxml" />
