--- a/NBL.DAL/NBL.DAL.csproj
+++ b/NBL.DAL/NBL.DAL.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Contracts\IPostOfficeGateway.cs" />
     <Compile Include="Contracts\IProductGateway.cs" />
     <Compile Include="Contracts\IProductionQcGateway.cs" />
+    <Compile Include="Contracts\IProductReplaceGateway.cs" />
     <Compile Include="Contracts\IRegionGateway.cs" />
     <Compile Include="Contracts\IReportGateway.cs" />
     <Compile Include="Contracts\IProductReturnGateway.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="PostOfficeGateway.cs" />
     <Compile Include="ProductGateway.cs" />
     <Compile Include="ProductionQcGateway.cs" />
+    <Compile Include="ProductReplaceGateway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegionGateway.cs" />
     <Compile Include="ReportGateway.cs" />
