--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -8014,6 +8014,8 @@
     <Content Include="Areas\Corporate\Views\Requisition\PendingRequisition.cshtml" />
     <Content Include="Files\Received_Product_For_11312" />
     <Content Include="Areas\Production\Views\Product\DispatchList.cshtml" />
+    <Content Include="Files\Ordered_Product_List_For_152" />
+    <Content Include="Areas\Corporate\Views\Home\DispatchList.cshtml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
     <None Include="Properties\PublishProfiles\Publish.pubxml" />
@@ -8143,6 +8145,7 @@
     <Content Include="Views\Shared\_ViewDeliveryOrderDetailsModalPartialPage.cshtml" />
     <Content Include="Views\Shared\_ViewLoadAllTempReplaceProductPartialPage.cshtml" />
     <Content Include="Views\Shared\_ModalReplaceDeliveryPartialPage.cshtml" />
+    <Content Include="Views\Shared\_ViewDispatchPartialPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
