--- a/NBL/NBL.csproj
+++ b/NBL/NBL.csproj
@@ -8029,8 +8029,10 @@
     <Content Include="Areas\Sales\Views\Product\ReceiveTransferProduct.cshtml" />
     <Content Include="Areas\Sales\Views\Product\TransferReceiveableDetails.cshtml" />
     <Content Include="Areas\Sales\Views\Shared\_ViewTransferReceivablePartialPage.cshtml" />
-    <Content Include="Areas\Sales\Views\Shared\_OrderListPartialPage.cshtml" />
+    <Content Include="Views\Shared\_OrderListPartialPage.cshtml" />
     <Content Include="Areas\Sales\Views\Order\CancelledOrders.cshtml" />
+    <Content Include="Areas\Production\Views\Delivery\DeliverableOrderList.cshtml" />
+    <Content Include="Areas\Production\Views\Delivery\OrderDelivery.cshtml" />
     <None Include="Properties\PublishProfiles\Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\NBL_Publish.pubxml" />
     <None Include="Properties\PublishProfiles\Publish.pubxml" />
