--- a/NBL.Models/NBL.Models.csproj
+++ b/NBL.Models/NBL.Models.csproj
@@ -82,6 +82,7 @@
     <Compile Include="AutoMapper\AutoMapperConfiguration.cs" />
     <Compile Include="AutoMapper\DomainProfile.cs" />
     <Compile Include="Contracts\IMonth.cs" />
+    <Compile Include="EntityModels\Approval\ApprovalAction.cs" />
     <Compile Include="EntityModels\Approval\ApprovalPathModel.cs" />
     <Compile Include="EntityModels\Banks\Bank.cs" />
     <Compile Include="EntityModels\Banks\BankBranch.cs" />
@@ -184,6 +185,8 @@
     <Compile Include="ViewModels\Replaces\ViewReplaceDetailsModel.cs" />
     <Compile Include="ViewModels\Replaces\ViewReplaceModel.cs" />
     <Compile Include="ViewModels\Requisitions\ViewCreateGeneralRequsitionModel.cs" />
+    <Compile Include="ViewModels\Requisitions\ViewGeneralRequisitionModel.cs" />
+    <Compile Include="ViewModels\Requisitions\ViewGeneralRequistionDetailsModel.cs" />
     <Compile Include="ViewModels\Requisitions\ViewMonthlyRequisitionModel.cs" />
     <Compile Include="ViewModels\Requisitions\ViewRequisitionModel.cs" />
     <Compile Include="EntityModels\Requisitions\RequisitionModel.cs" />
